# sample-streamlit-chat-app

./: .gitignore  Dockerfile  README.md  app.py  cloudbuild.yaml  cloudrun.sh  compose.yaml  graph.py  pyproject.toml  requirements.txt
data/: 20230930_172103_team_stats_batting.csv  20230930_172103_team_stats_pitcing.csv
