[tool.poetry]
name = "sample-streamlit-chat-app"
version = "0.1.0"
description = "Streamlit Sample Chat App for Baseball"
authors = ["shinyorke <spirits.is.my.rader@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
streamlit = "^1.27.1"
plotly = "^5.17.0"


[tool.poetry.group.dev.dependencies]
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
