[tool.poetry]
name = "sample-streamlit-chat-app"
version = "0.1.0"
description = "Streamlit Sample Chat App for Baseball"
authors = ["shinyorke <spirits.is.my.rader@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.2"
streamlit = "^1.33.0"
plotly = "^5.21.0"


[tool.poetry.group.dev.dependencies]
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
